# check_unattended_upgrades

./: .gitignore  .python-version  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  README.md.template.sh  README.rst  README_template.rst  check_unattended_upgrades  check_unattended_upgrades.py  description  icingaexchange.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
src/check_unattended_upgrades/: __init__.py
test/: README.md  apt-config.bats  different-dates.bats  errors.bats  getopts.bats  options.bash_unit  options.bats  patch.sh  systemd_timers.bats
test/lib/: render-readme.sh  skeleton.sh  test-helper.sh  test-runner.sh
tests/: helper.py  test_argparse.py  test_config.py  test_different_contexts.py  test_different_scopes.py  test_simple.py
tests/files/: apt-config.txt
tests/files/apt-config/: allowed-origins.txt
