[tool.poetry]
name = "check_unattended_upgrades"
version = "0.1.0"
description = ""
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.md"
repository = "https://github.com/Josef-Friedrich/check_unattended_upgrades"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
nagiosplugin = "^1.3"

[tool.poetry.group.dev.dependencies]
freezegun = "^1"
mypy = "^1"
nagiosplugin-stubs = "^0"
pytest = "^8"
readme-patcher = "^0"
ruff = "^0"
tox = "^4"
types-freezegun = "^1.1.10"

[tool.mypy]
files = "check_unattended_upgrades.py"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"check_unattended_upgrades.py" = "check_unattended_upgrades:main"
