[project]
name = "check_unattended_upgrades"
version = "0.1.0"
description = ""
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["nagiosplugin>=1.3,<2"]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy>=1.11.2",
    "nagiosplugin-stubs>=0.6.4",
    "pytest>=9.0.2",
    "types-freezegun>=1.1.10",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/check_unattended_upgrades"

[project.scripts]
"check_unattended_upgrades.py" = "check_unattended_upgrades:main"

[tool.uv]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "userdetect"
module-root = ""
namespace = true

[tool.mypy]
files = "check_unattended_upgrades.py"
strict = true
